--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Pesos de Academia</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="./index.css">
 </head>
 <body>
   <section class="hero">
