--- a/index.html
+++ b/index.html
@@ -53,6 +53,62 @@
     </div>
   </section>
 
+    <section class="bg-light py-5">
+    <div class="container">
+      <h2 class="text-center mb-5">O que dizem nossos clientes</h2>
+      <div class="row g-4">
+        <div class="col-md-4">
+          <div class="card p-3 shadow-sm">
+            <p>"Os halteres de neoprene são incríveis! Leves, confortáveis e com ótima aderência."</p>
+            <h6 class="text-muted">— Mariana A., São Paulo</h6>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card p-3 shadow-sm">
+            <p>"Comprei as anilhas e estou muito satisfeito com a qualidade. Recomendo a todos os meus amigos da academia."</p>
+            <h6 class="text-muted">— Ricardo M., Belo Horizonte</h6>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card p-3 shadow-sm">
+            <p>"Atendimento rápido e produto excelente. O kettlebell tem um design que facilita muito nos treinos!"</p>
+            <h6 class="text-muted">— Carla S., Curitiba</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+    <footer class="bg-dark text-white mt-5 pt-5 pb-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h5>Pesos de alta qualidade</h5>
+          <p>Oferecemos equipamentos de treino com alta performance, segurança e conforto para você atingir seu melhor.</p>
+        </div>
+        <div class="col-md-4">
+          <h5>Links Rápidos</h5>
+          <ul class="list-unstyled">
+            <li><a href="#produtos" class="text-white text-decoration-none">Produtos</a></li>
+            <li><a href="#" class="text-white text-decoration-none">Sobre Nós</a></li>
+            <li><a href="#" class="text-white text-decoration-none">Contato</a></li>
+            <li><a href="#" class="text-white text-decoration-none">Termos de Uso</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h5>Nos acompanhe</h5>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-white text-decoration-none">Instagram</a></li>
+            <li><a href="#" class="text-white text-decoration-none">Facebook</a></li>
+            <li><a href="#" class="text-white text-decoration-none">YouTube</a></li>
+          </ul>
+        </div>
+      </div>
+      <hr class="bg-white" />
+      <p class="text-center mb-0">&copy; 2025 Pesos de Academia. Todos os direitos reservados.</p>
+    </div>
+  </footer>
+
   <footer>
     &copy; 2025 Pesos de Academia. Todos os direitos reservados.
   </footer>
